# lunchemail

./: .gitignore  LICENSE  README.md  config.yaml  lunchemail.py  pyproject.toml  requirements.txt  sampleconfig.yaml  sendlunchemail.py
